--- a/boards.html
+++ b/boards.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Assignment 1.1 The Foundation</title>
+</head>
+<body>
 
+<h1>Degree Objectives for RES</h1>
+<p>
+ROBOTICS AND EMBEDDED SYSTEMS DEGREE OBJECTIVES
+1. Design and complete robotic and embedded systems solutions that address real-world situations and challenges.
+2. Demonstrate embedded microprocessor system skills such as microcontroller selection, digital logic design, schematic 
+creation, printed circuit board layout and construction, electromagnetic compatibility design and manufacturing design. 
+3. Develop vision and sensing systems for use in robotic applications. 
+4. Integrate transducers, actuators, feedback and other mechanical systems into robotic platforms. 
+5. Apply examples of human and autonomous control systems into robotic platforms. 
+6. Implement artificial intelligence and data systems into robotic platforms. 
+</p>
+
+</body>
+</html>
