--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
 
-<h1>Programming Meme</h1>
-<p>
-<img id="codingmeme" src="https://github.com/IndusCo/TheFoundation/blob/main/codingmeme.png?raw=true">
+<h1><center>Programming Meme</center></h1>
+<p><center>
+<img id="codingmeme.png" src="https://github.com/IndusCo/TheFoundation/blob/main/codingmeme.png?raw=true">
+</center>
 </p>
 
 </body>
