--- a/boards.html
+++ b/boards.html
@@ -11,16 +11,28 @@
 <!-- This is an HTML comment -->
 <body>
 <!-- This is an HTML comment -->
-<h1>Degree Objectives for RES</h1>
+<h1><center>Degree Objectives for RES</center></h1>
 <!-- This is an HTML comment -->
-<p>ROBOTICS AND EMBEDDED SYSTEMS DEGREE OBJECTIVES
-1. Design and complete robotic and embedded systems solutions that address real-world situations and challenges.
-2. Demonstrate embedded microprocessor system skills such as microcontroller selection, digital logic design, schematic 
-creation, printed circuit board layout and construction, electromagnetic compatibility design and manufacturing design. 
-3. Develop vision and sensing systems for use in robotic applications. 
-4. Integrate transducers, actuators, feedback and other mechanical systems into robotic platforms. 
-5. Apply examples of human and autonomous control systems into robotic platforms. 
-6. Implement artificial intelligence and data systems into robotic platforms. </p>
+<table border="2">
+<tr>
+<td>
+<p style="font-style: italic">ROBOTICS AND EMBEDDED SYSTEMS</p>
+</td>
+</tr>
+<tr>
+<td>
+<ul>
+<li>Design and complete robotic and embedded systems solutions that address real-world situations and challenges.</li>
+<li>Demonstrate embedded microprocessor system skills such as microcontroller selection, digital logic design, schematic 
+creation, printed circuit board layout and construction, electromagnetic compatibility design and manufacturing design.</li>
+<li>Develop vision and sensing systems for use in robotic applications.</li>
+<li>Integrate transducers, actuators, feedback and other mechanical systems into robotic platforms.</li>
+<li>Apply examples of human and autonomous control systems into robotic platforms.</li>
+<li>Implement artificial intelligence and data systems into robotic platforms.</li>
+</ul>
+</td>
+</tr>
+</table>
 <!-- This is an HTML comment -->
 </body>
 <!-- This is an HTML comment -->
