--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1><center>Programming Meme</center></h1>
 <p><center>
-<img id="codingmeme.png" src="https://github.com/IndusCo/TheFoundation/blob/main/codingmeme.png?raw=true">
+<img id="codingmeme.png" src="https://github.com/IndusCo/TheFoundation/blob/main/codingmeme.png?raw=true" id="memeimage">
 </center>
 </p>
 
