--- a/boards.html
+++ b/boards.html
@@ -7,6 +7,7 @@
 <!-- This is an HTML comment -->
 <title>Degree Objectives</title>
 <!-- This is an HTML comment -->
+<link rel="stylesheet" href="main.css">
 </head>
 <!-- This is an HTML comment -->
 <body>
