--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
+<!--Ahsan Tariq-->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Assignment 1.1 The Foundation</title>
-<link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Random Image Movement</title>
+    <style>
+        /* Styling for the image */
+        #movingImage {
+            position: absolute;
+            transition: transform 0.3s ease-in-out;
+        }
+    </style>
 </head>
 <body>
+<link rel="stylesheet" href="main.css">
 
-<h1><center>Programming Meme</center></h1>
-<p><center>
-<img id="codingmeme.png" src="https://github.com/IndusCo/TheFoundation/blob/main/codingmeme.png?raw=true" id="memeimage">
+    <!-- Image element to be moved -->
+    <img id="movingImage" src="C:\Users\Sunny\Desktop\TheFoundation\codingmeme.png" alt="Moving Image">
+    
+    <!-- JavaScript to handle image movement -->
+    <script src="index.js"></script>
+
+<center>
+    <!-- Buttons to start and stop movement -->
+    <p>
+    <button id="startButton">Start</button>
+    <button id="stopButton">Stop</button>
+    </p>
 </center>
-</p>
 
 </body>
 </html>
