--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="main.css">
 
     <!-- Image element to be moved -->
-    <img id="movingImage" src="C:\Users\Sunny\Desktop\TheFoundation\codingmeme.png" alt="Moving Image">
+    <img id="movingImage" src="https://github.com/IndusCo/TheFoundation/blob/main/codingmeme.png" alt="Moving Image">
     
     <!-- JavaScript to handle image movement -->
     <script src="index.js"></script>
