--- a/index.html
+++ b/index.html
@@ -17,18 +17,23 @@
 <link rel="stylesheet" href="main.css">
 
     <!-- Image element to be moved -->
-    <img id="movingImage" src="https://github.com/IndusCo/TheFoundation/blob/main/codingmeme.png" alt="Moving Image">
+    <img id="movingImage" src="C:\Users\Sunny\Desktop\TheFoundation\codingmeme.png" alt="Moving Image">
     
     <!-- JavaScript to handle image movement -->
     <script src="index.js"></script>
 
 <center>
     <!-- Buttons to start and stop movement -->
+    <h1>Listen Girl...</h1>
+    <h3>I made this sampled beat a long time ago lol... - Ahsan</h3>
     <p>
     <button id="startButton">Start</button>
     <button id="stopButton">Stop</button>
     </p>
 </center>
+
+ <!-- Audio element for playing audio -->
+ <audio id="audioPlayer" src="C:\Users\Sunny\Desktop\TheFoundation\music.mp3"></audio>
 
 </body>
 </html>
