--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </center>
 
  <!-- Audio element for playing audio -->
- <audio id="audioPlayer" src="C:\Users\Sunny\Desktop\TheFoundation\music.mp3"></audio>
+ <audio id="audioPlayer" src="https://github.com/IndusCo/TheFoundation/blob/main/music.mp3"></audio>
 
 </body>
 </html>
